Revert test updates