@@ -20,13 +20,13 @@ import java.time.Clock;
 import java.time.Duration;
 import java.time.Instant;
 import java.time.temporal.ChronoUnit;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 import java.util.Random;
 import java.util.function.Function;
 import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.params.ParameterizedTest;
-import org.junit.jupiter.params.provider.CsvSource;
+import org.junit.jupiter.api.Test;
 import org.pmiops.workbench.actionaudit.Agent;
 import org.pmiops.workbench.actionaudit.auditors.UserServiceAuditor;
 import org.pmiops.workbench.config.WorkbenchConfig;
@@ -34,7 +34,6 @@ import org.pmiops.workbench.db.dao.AccessModuleDao;
 import org.pmiops.workbench.db.dao.AccessTierDao;
 import org.pmiops.workbench.db.dao.UserAccessTierDao;
 import org.pmiops.workbench.db.dao.UserDao;
-import org.pmiops.workbench.db.dao.UserInitialCreditsExpirationDao;
 import org.pmiops.workbench.db.dao.UserService;
 import org.pmiops.workbench.db.dao.VerifiedInstitutionalAffiliationDao;
 import org.pmiops.workbench.db.model.DbAccessModule;
@@ -109,7 +108,6 @@ public class UserServiceAccessTest {
   @Autowired private UserDao userDao;
   @Autowired private UserService userService;
   @Autowired private VerifiedInstitutionalAffiliationDao verifiedInstitutionalAffiliationDao;
-  @Autowired private UserInitialCreditsExpirationDao userInitialCreditsExpirationDao;
 
   @MockBean private MailService mailService;
 
@@ -169,7 +167,6 @@ public class UserServiceAccessTest {
     providedWorkbenchConfig.access.renewal.expiryDays = EXPIRATION_DAYS;
     providedWorkbenchConfig.access.renewal.expiryDaysWarningThresholds =
         ImmutableList.of(1L, 3L, 7L, 15L, 30L);
-    providedWorkbenchConfig.billing.freeTierCreditValidityPeriodDays = 57L;
     registeredTier = accessTierDao.save(createRegisteredTier());
     controlledTier = accessTierDao.save(createControlledTier());
     accessModules = TestMockFactory.createAccessModules(accessModuleDao);
@@ -201,11 +198,8 @@ public class UserServiceAccessTest {
     PROVIDED_CLOCK.setInstant(START_INSTANT);
   }
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,false"})
-  public void test_updateUserWithRetries_never_registered(
-      boolean enableInitialCreditsExpiration, boolean initialCreditsExpirationExists) {
-    setEnableInitialCreditsExpiration(enableInitialCreditsExpiration);
+  @Test
+  public void test_updateUserWithRetries_never_registered() {
     assertThat(userAccessTierDao.findAll()).isEmpty();
 
     dbUser = updateUserAccessTiers();
@@ -216,28 +210,21 @@ public class UserServiceAccessTest {
     Optional<DbUserAccessTier> userAccessMaybe =
         userAccessTierDao.getByUserAndAccessTier(dbUser, registeredTier);
     assertThat(userAccessMaybe).isEmpty();
-    assertUserInitialCreditsExpirationExists(initialCreditsExpirationExists);
   }
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,true"})
-  public void test_updateUserWithRetries_register(
-      boolean enableInitialCreditsExpiration, boolean initialCreditsExpirationExists) {
-    setEnableInitialCreditsExpiration(enableInitialCreditsExpiration);
+  @Test
+  public void test_updateUserWithRetries_register() {
     assertThat(userAccessTierDao.findAll()).isEmpty();
 
     dbUser = updateUserWithRetries(this::registerUser);
     assertRegisteredTierEnabled(dbUser);
     assertUserNotInAccessTier(dbUser, controlledTier);
-    assertUserInitialCreditsExpirationExists(initialCreditsExpirationExists);
   }
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,true"})
-  public void testSimulateUserFlowThroughRenewal(
-      boolean enableInitialCreditsExpiration, boolean initialCreditsExpirationExists) {
+  @Test
+  public void testSimulateUserFlowThroughRenewal() {
     // initialize user as registered with generic values including bypassed DUCC
-    setEnableInitialCreditsExpiration(enableInitialCreditsExpiration);
+
     dbUser = updateUserWithRetries(this::registerUser);
     assertRegisteredTierEnabled(dbUser);
 
@@ -263,7 +250,6 @@ public class UserServiceAccessTest {
         new Timestamp(PROVIDED_CLOCK.millis()));
     dbUser = updateUserAccessTiers();
     assertRegisteredTierEnabled(dbUser);
-    assertUserInitialCreditsExpirationExists(initialCreditsExpirationExists);
   }
 
   private DbUser removeDuccBypass(DbUser user) {
@@ -279,71 +265,53 @@ public class UserServiceAccessTest {
 
   // enabled/disabled is more of a master switch than a module but let's verify it anyway
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,true"})
-  public void test_updateUserWithRetries_disable_noncompliant(
-      boolean enableInitialCreditsExpiration, boolean initialCreditsExpirationExists) {
+  @Test
+  public void test_updateUserWithRetries_disable_noncompliant() {
     testUnregistration(
         user -> {
           user.setDisabled(true);
           return userDao.save(user);
-        },
-        enableInitialCreditsExpiration,
-        initialCreditsExpirationExists);
+        });
   }
 
   // ERA Commons is not subject to annual renewal.
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,true"})
-  public void test_updateUserWithRetries_era_unbypassed_noncompliant(
-      boolean enableInitialCreditsExpiration, boolean initialCreditsExpirationExists) {
+  @Test
+  public void test_updateUserWithRetries_era_unbypassed_noncompliant() {
     testUnregistration(
         user -> {
           accessModuleService.updateBypassTime(
               dbUser.getUserId(), DbAccessModuleName.ERA_COMMONS, false);
           return userDao.save(user);
-        },
-        enableInitialCreditsExpiration,
-        initialCreditsExpirationExists);
+        });
   }
 
   // Two Factor Auth (2FA) is not subject to annual renewal.
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,true"})
-  public void test_updateUserWithRetries_2fa_unbypassed_noncompliant(
-      boolean enableInitialCreditsExpiration, boolean initialCreditsExpirationExists) {
+  @Test
+  public void test_updateUserWithRetries_2fa_unbypassed_noncompliant() {
     testUnregistration(
         user -> {
           accessModuleService.updateBypassTime(
               dbUser.getUserId(), DbAccessModuleName.TWO_FACTOR_AUTH, false);
           return userDao.save(user);
-        },
-        enableInitialCreditsExpiration,
-        initialCreditsExpirationExists);
+        });
   }
 
   // Compliance training is subject to annual renewal.
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,true"})
-  public void test_updateUserWithRetries_training_unbypassed_aar_noncompliant(
-      boolean enableInitialCreditsExpiration, boolean initialCreditsExpirationExists) {
+  @Test
+  public void test_updateUserWithRetries_training_unbypassed_aar_noncompliant() {
     testUnregistration(
         user -> {
           accessModuleService.updateBypassTime(
               dbUser.getUserId(), DbAccessModuleName.RT_COMPLIANCE_TRAINING, false);
           return userDao.save(user);
-        },
-        enableInitialCreditsExpiration,
-        initialCreditsExpirationExists);
+        });
   }
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,true"})
-  public void test_updateUserWithRetries_training_unbypassed_aar_expired_noncompliant(
-      boolean enableInitialCreditsExpiration, boolean initialCreditsExpirationExists) {
+  @Test
+  public void test_updateUserWithRetries_training_unbypassed_aar_expired_noncompliant() {
     testUnregistration(
         user -> {
           final Timestamp willExpire = Timestamp.from(START_INSTANT);
@@ -355,32 +323,24 @@ public class UserServiceAccessTest {
           advanceClockDays(EXPIRATION_DAYS + 1);
 
           return userDao.save(user);
-        },
-        enableInitialCreditsExpiration,
-        initialCreditsExpirationExists);
+        });
   }
 
   // DUCC is subject to annual renewal.
   // A missing DUCC version or a version other than the latest is also noncompliant.
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,true"})
-  public void test_updateUserWithRetries_ducc_unbypassed_aar_noncompliant(
-      boolean enableInitialCreditsExpiration, boolean initialCreditsExpirationExists) {
+  @Test
+  public void test_updateUserWithRetries_ducc_unbypassed_aar_noncompliant() {
     testUnregistration(
         user -> {
           accessModuleService.updateBypassTime(
               dbUser.getUserId(), DbAccessModuleName.DATA_USER_CODE_OF_CONDUCT, false);
           return userDao.save(user);
-        },
-        enableInitialCreditsExpiration,
-        initialCreditsExpirationExists);
+        });
   }
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,true"})
-  public void test_updateUserWithRetries_ducc_unbypassed_aar_missing_version_noncompliant(
-      boolean enableInitialCreditsExpiration, boolean initialCreditsExpirationExists) {
+  @Test
+  public void test_updateUserWithRetries_ducc_unbypassed_aar_missing_version_noncompliant() {
     testUnregistration(
         user -> {
           accessModuleService.updateBypassTime(
@@ -388,15 +348,11 @@ public class UserServiceAccessTest {
           accessModuleService.updateCompletionTime(
               dbUser, DbAccessModuleName.DATA_USER_CODE_OF_CONDUCT, Timestamp.from(START_INSTANT));
           return userDao.save(user);
-        },
-        enableInitialCreditsExpiration,
-        initialCreditsExpirationExists);
+        });
   }
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,true"})
-  public void test_updateUserWithRetries_ducc_unbypassed_aar_wrong_version_noncompliant(
-      boolean enableInitialCreditsExpiration, boolean initialCreditsExpirationExists) {
+  @Test
+  public void test_updateUserWithRetries_ducc_unbypassed_aar_wrong_version_noncompliant() {
     providedWorkbenchConfig.access.currentDuccVersions = ImmutableList.of(4, 5);
 
     testUnregistration(
@@ -407,15 +363,11 @@ public class UserServiceAccessTest {
               dbUser, DbAccessModuleName.DATA_USER_CODE_OF_CONDUCT, Timestamp.from(START_INSTANT));
           user.setDuccAgreement(signDucc(user, 3));
           return userDao.save(user);
-        },
-        enableInitialCreditsExpiration,
-        initialCreditsExpirationExists);
+        });
   }
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,true"})
-  public void test_updateUserWithRetries_ducc_unbypassed_aar_expired_noncompliant(
-      boolean enableInitialCreditsExpiration, boolean initialCreditsExpirationExists) {
+  @Test
+  public void test_updateUserWithRetries_ducc_unbypassed_aar_expired_noncompliant() {
     testUnregistration(
         user -> {
           final Timestamp willExpire = Timestamp.from(START_INSTANT);
@@ -429,17 +381,13 @@ public class UserServiceAccessTest {
           advanceClockDays(EXPIRATION_DAYS + 1);
 
           return userDao.save(user);
-        },
-        enableInitialCreditsExpiration,
-        initialCreditsExpirationExists);
+        });
   }
 
   // Publications confirmation is subject to annual renewal.
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,true"})
-  public void test_updateUserWithRetries_publications_unbypassed_publications_not_confirmed(
-      boolean enableInitialCreditsExpiration, boolean initialCreditsExpirationExists) {
+  @Test
+  public void test_updateUserWithRetries_publications_unbypassed_publications_not_confirmed() {
     testUnregistration(
         user -> {
           accessModuleService.updateBypassTime(
@@ -447,15 +395,11 @@ public class UserServiceAccessTest {
           accessModuleService.updateCompletionTime(
               dbUser, DbAccessModuleName.PUBLICATION_CONFIRMATION, null);
           return userDao.save(user);
-        },
-        enableInitialCreditsExpiration,
-        initialCreditsExpirationExists);
+        });
   }
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,true"})
-  public void test_updateUserWithRetries_publications_unbypassed_publications_expired(
-      boolean enableInitialCreditsExpiration, boolean initialCreditsExpirationExists) {
+  @Test
+  public void test_updateUserWithRetries_publications_unbypassed_publications_expired() {
     testUnregistration(
         user -> {
           accessModuleService.updateBypassTime(
@@ -466,17 +410,13 @@ public class UserServiceAccessTest {
           advanceClockDays(EXPIRATION_DAYS + 1);
 
           return userDao.save(user);
-        },
-        enableInitialCreditsExpiration,
-        initialCreditsExpirationExists);
+        });
   }
 
   // Profile confirmation is subject to annual renewal.
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,true"})
-  public void test_updateUserWithRetries_profile_unbypassed_profile_not_confirmed(
-      boolean enableInitialCreditsExpiration, boolean initialCreditsExpirationExists) {
+  @Test
+  public void test_updateUserWithRetries_profile_unbypassed_profile_not_confirmed() {
     testUnregistration(
         user -> {
           accessModuleService.updateBypassTime(
@@ -484,15 +424,11 @@ public class UserServiceAccessTest {
           accessModuleService.updateCompletionTime(
               dbUser, DbAccessModuleName.PROFILE_CONFIRMATION, null);
           return userDao.save(user);
-        },
-        enableInitialCreditsExpiration,
-        initialCreditsExpirationExists);
+        });
   }
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,true"})
-  public void test_updateUserWithRetries_profile_unbypassed_profile_expired(
-      boolean enableInitialCreditsExpiration, boolean initialCreditsExpirationExists) {
+  @Test
+  public void test_updateUserWithRetries_profile_unbypassed_profile_expired() {
     testUnregistration(
         user -> {
           accessModuleService.updateBypassTime(
@@ -503,16 +439,11 @@ public class UserServiceAccessTest {
           advanceClockDays(EXPIRATION_DAYS + 1);
 
           return userDao.save(user);
-        },
-        enableInitialCreditsExpiration,
-        initialCreditsExpirationExists);
+        });
   }
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,false"})
-  public void test_maybeSendAccessTierExpirationEmails_up_to_date(
-      boolean enableInitialCreditsExpiration, boolean initialCreditsExpirationExists) {
-    setEnableInitialCreditsExpiration(enableInitialCreditsExpiration);
+  @Test
+  public void test_maybeSendAccessTierExpirationEmails_up_to_date() {
     final Timestamp now = new Timestamp(PROVIDED_CLOCK.millis());
     accessModuleService.updateCompletionTime(dbUser, DbAccessModuleName.PROFILE_CONFIRMATION, now);
     accessModuleService.updateCompletionTime(
@@ -528,16 +459,13 @@ public class UserServiceAccessTest {
     userService.maybeSendAccessTierExpirationEmails(dbUser);
 
     verifyNoInteractions(mailService);
-    assertUserInitialCreditsExpirationExists(initialCreditsExpirationExists);
   }
 
   // bypassed modules do not expire: so no email
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,false"})
-  public void test_maybeSendAccessTierExpirationEmails_bypassed_is_up_to_date(
-      boolean enableInitialCreditsExpiration, boolean initialCreditsExpirationExists) {
-    setEnableInitialCreditsExpiration(enableInitialCreditsExpiration);
+  @Test
+  public void test_maybeSendAccessTierExpirationEmails_bypassed_is_up_to_date() {
+    final Timestamp now = new Timestamp(PROVIDED_CLOCK.millis());
 
     accessModuleService.updateBypassTime(
         dbUser.getUserId(), DbAccessModuleName.DATA_USER_CODE_OF_CONDUCT, true);
@@ -551,11 +479,9 @@ public class UserServiceAccessTest {
     userService.maybeSendAccessTierExpirationEmails(dbUser);
 
     verifyNoInteractions(mailService);
-    assertUserInitialCreditsExpirationExists(initialCreditsExpirationExists);
   }
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,false"})
+  @Test
   public void test_maybeSendAccessTierExpirationEmails_expiring_1_rt() throws MessagingException {
     // these are up to date
     final Timestamp now = new Timestamp(PROVIDED_CLOCK.millis());
@@ -590,8 +516,7 @@ public class UserServiceAccessTest {
     verify(mailService, never()).alertUserAccessTierExpiration(any(), any(), any());
   }
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,false"})
+  @Test
   public void test_maybeSendAccessTierExpirationEmails_expiring_1_ct() throws MessagingException {
     // expiring in 1 day (plus some) will trigger the 1-day warning
 
@@ -618,11 +543,8 @@ public class UserServiceAccessTest {
   // if any module is incomplete, we don't send an email
   // because the user is not expiring soon - they never had access at all
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,false"})
-  public void test_maybeSendAccessTierExpirationEmails_expired_but_missing(
-      boolean enableInitialCreditsExpiration, boolean initialCreditsExpirationExists) {
-    setEnableInitialCreditsExpiration(enableInitialCreditsExpiration);
+  @Test
+  public void test_maybeSendAccessTierExpirationEmails_expired_but_missing() {
     // these are up to date
     final Timestamp now = new Timestamp(PROVIDED_CLOCK.millis());
     accessModuleService.updateCompletionTime(
@@ -644,14 +566,12 @@ public class UserServiceAccessTest {
     userService.maybeSendAccessTierExpirationEmails(dbUser);
 
     verifyNoInteractions(mailService);
-    assertUserInitialCreditsExpirationExists(initialCreditsExpirationExists);
   }
 
   // one or more bypassed modules will not affect whether emails are sent.
   // we consider only the unbypassed
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,false"})
+  @Test
   public void test_maybeSendAccessTierExpirationEmails_expiring_1_with_bypass()
       throws MessagingException {
     // these are up to date
@@ -679,8 +599,7 @@ public class UserServiceAccessTest {
 
   // bypass times are not relevant to expiration emails
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,false"})
+  @Test
   public void test_maybeSendAccessTierExpirationEmails_expiring_1_with_older_bypass()
       throws MessagingException {
     // these are up to date
@@ -709,11 +628,8 @@ public class UserServiceAccessTest {
   // we do not send an email if the expiration time is within the day.
   // we sent one yesterday for 1 day already, and we will send another once it actually expires.
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,false"})
-  public void test_maybeSendAccessTierExpirationEmails_expiring_today(
-      boolean enableInitialCreditsExpiration, boolean initialCreditsExpirationExists) {
-    setEnableInitialCreditsExpiration(enableInitialCreditsExpiration);
+  @Test
+  public void test_maybeSendAccessTierExpirationEmails_expiring_today() {
     // these are up to date
     final Timestamp now = new Timestamp(PROVIDED_CLOCK.millis());
     accessModuleService.updateCompletionTime(dbUser, DbAccessModuleName.PROFILE_CONFIRMATION, now);
@@ -734,11 +650,9 @@ public class UserServiceAccessTest {
     userService.maybeSendAccessTierExpirationEmails(dbUser);
 
     verifyNoInteractions(mailService);
-    assertUserInitialCreditsExpirationExists(initialCreditsExpirationExists);
   }
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,false"})
+  @Test
   public void test_maybeSendAccessTierExpirationEmail_expiring_30() throws MessagingException {
     // these are up to date
     final Timestamp now = new Timestamp(PROVIDED_CLOCK.millis());
@@ -765,11 +679,8 @@ public class UserServiceAccessTest {
             dbUser, 30, expirationTime, REGISTERED_TIER_SHORT_NAME);
   }
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,false"})
-  public void test_maybeSendAccessTierExpirationEmails_expiring_31(
-      boolean enableInitialCreditsExpiration, boolean initialCreditsExpirationExists) {
-    setEnableInitialCreditsExpiration(enableInitialCreditsExpiration);
+  @Test
+  public void test_maybeSendAccessTierExpirationEmails_expiring_31() {
     // these are up to date
     final Timestamp now = new Timestamp(PROVIDED_CLOCK.millis());
     accessModuleService.updateCompletionTime(dbUser, DbAccessModuleName.PROFILE_CONFIRMATION, now);
@@ -788,13 +699,11 @@ public class UserServiceAccessTest {
     userService.maybeSendAccessTierExpirationEmails(dbUser);
 
     verifyNoInteractions(mailService);
-    assertUserInitialCreditsExpirationExists(initialCreditsExpirationExists);
   }
 
   // 15 days is sooner, so that's the email we send rather than 30
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,false"})
+  @Test
   public void test_maybeSendAccessTierExpirationEmails_expiring_15_and_30()
       throws MessagingException {
     // these are up to date
@@ -831,11 +740,8 @@ public class UserServiceAccessTest {
   // 14 days is sooner than 15, but 14 days is not one of our email warning thresholds
   // so we send no email
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,false"})
-  public void test_maybeSendAccessTierExpirationEmails_expiring_14_and_15(
-      boolean enableInitialCreditsExpiration, boolean initialCreditsExpirationExists) {
-    setEnableInitialCreditsExpiration(enableInitialCreditsExpiration);
+  @Test
+  public void test_maybeSendAccessTierExpirationEmails_expiring_14_and_15() {
     // these are up to date
     final Timestamp now = new Timestamp(PROVIDED_CLOCK.millis());
     accessModuleService.updateCompletionTime(dbUser, DbAccessModuleName.PROFILE_CONFIRMATION, now);
@@ -856,11 +762,9 @@ public class UserServiceAccessTest {
     userService.maybeSendAccessTierExpirationEmails(dbUser);
 
     verifyNoInteractions(mailService);
-    assertUserInitialCreditsExpirationExists(initialCreditsExpirationExists);
   }
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,false"})
+  @Test
   public void test_maybeSendAccessTierExpirationEmails_expired_rt() throws MessagingException {
     // these are up to date
     final Timestamp now = new Timestamp(PROVIDED_CLOCK.millis());
@@ -893,8 +797,7 @@ public class UserServiceAccessTest {
         .alertUserAccessTierWarningThreshold(any(), anyLong(), any(), any());
   }
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,false"})
+  @Test
   public void test_maybeSendAccessTierExpirationEmails_expired_ct() throws MessagingException {
     // but this is expired
     final Duration oneHour = Duration.ofHours(1);
@@ -920,11 +823,8 @@ public class UserServiceAccessTest {
   // don't send an email if we have been expired for more than a day
   // because we sent the expiration email yesterday
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,false"})
-  public void test_maybeSendAccessTierExpirationEmails_extra_expired(
-      boolean enableInitialCreditsExpiration, boolean initialCreditsExpirationExists) {
-    setEnableInitialCreditsExpiration(enableInitialCreditsExpiration);
+  @Test
+  public void test_maybeSendAccessTierExpirationEmails_extra_expired() {
     // these are up to date
     final Timestamp now = new Timestamp(PROVIDED_CLOCK.millis());
     accessModuleService.updateCompletionTime(dbUser, DbAccessModuleName.PROFILE_CONFIRMATION, now);
@@ -948,13 +848,10 @@ public class UserServiceAccessTest {
     userService.maybeSendAccessTierExpirationEmails(dbUser);
 
     verifyNoInteractions(mailService);
-    assertUserInitialCreditsExpirationExists(initialCreditsExpirationExists);
   }
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,true"})
-  public void testInstitutionAddressInvalid_emailDomainsNotMatch(
-      boolean enableInitialCreditsExpiration, boolean initialCreditsExpirationExists) {
+  @Test
+  public void testInstitutionAddressInvalid_emailDomainsNotMatch() {
     testUnregistration(
         user -> {
           institutionService.updateInstitution(
@@ -962,45 +859,32 @@ public class UserServiceAccessTest {
               institution.tierConfigs(
                   ImmutableList.of(rtTierConfig.emailDomains(ImmutableList.of("test.com")))));
           return userDao.save(user);
-        },
-        enableInitialCreditsExpiration,
-        initialCreditsExpirationExists);
+        });
   }
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,true"})
-  public void testInstitutionAddressInvalid_emailDomainsNull(
-      boolean enableInitialCreditsExpiration, boolean initialCreditsExpirationExists) {
+  @Test
+  public void testInstitutionAddressInvalid_emailDomainsNull() {
     testUnregistration(
         user -> {
           institutionService.updateInstitution(
               institution.getShortName(),
               institution.tierConfigs(ImmutableList.of(rtTierConfig.emailDomains(null))));
           return userDao.save(user);
-        },
-        enableInitialCreditsExpiration,
-        initialCreditsExpirationExists);
+        });
   }
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,true"})
-  public void testInstitutionAddressInvalid_emailDomainsTierRequirementEmpty(
-      boolean enableInitialCreditsExpiration, boolean initialCreditsExpirationExists) {
+  @Test
+  public void testInstitutionAddressInvalid_emailDomainsTierRequirementEmpty() {
     testUnregistration(
         user -> {
           institutionService.updateInstitution(
               institution.getShortName(), institution.tierConfigs(ImmutableList.of()));
           return userDao.save(user);
-        },
-        enableInitialCreditsExpiration,
-        initialCreditsExpirationExists);
+        });
   }
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,true"})
-  public void testInstitutionAddressInvalid_emailAddressMatch(
-      boolean enableInitialCreditsExpiration, boolean initialCreditsExpirationExists) {
-    setEnableInitialCreditsExpiration(enableInitialCreditsExpiration);
+  @Test
+  public void testInstitutionAddressInvalid_emailAddressMatch() {
     institutionService.updateInstitution(
         institution.getShortName(),
         institution.tierConfigs(
@@ -1011,13 +895,10 @@ public class UserServiceAccessTest {
                     .emailDomains(null))));
     dbUser = updateUserWithRetries(this::registerUser);
     assertRegisteredTierEnabled(dbUser);
-    assertUserInitialCreditsExpirationExists(initialCreditsExpirationExists);
   }
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,true"})
-  public void testInstitutionAddressInvalid_emailAddressNotMatch(
-      boolean enableInitialCreditsExpiration, boolean initialCreditsExpirationExists) {
+  @Test
+  public void testInstitutionAddressInvalid_emailAddressNotMatch() {
     testUnregistration(
         user -> {
           institutionService.updateInstitution(
@@ -1029,15 +910,11 @@ public class UserServiceAccessTest {
                           .addEmailAddressesItem("randmom@email.com")
                           .emailDomains(null))));
           return userDao.save(user);
-        },
-        enableInitialCreditsExpiration,
-        initialCreditsExpirationExists);
+        });
   }
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,true"})
-  public void testInstitutionAddressInvalid_emailAddressNull(
-      boolean enableInitialCreditsExpiration, boolean initialCreditsExpirationExists) {
+  @Test
+  public void testInstitutionAddressInvalid_emailAddressNull() {
     testUnregistration(
         user -> {
           institutionService.updateInstitution(
@@ -1045,30 +922,21 @@ public class UserServiceAccessTest {
               institution.tierConfigs(
                   ImmutableList.of(rtTierConfig.emailDomains(null).emailAddresses(null))));
           return userDao.save(user);
-        },
-        enableInitialCreditsExpiration,
-        initialCreditsExpirationExists);
+        });
   }
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,true"})
-  public void testInstitutionAddressInvalid_emailAddressTierConfigNotExist(
-      boolean enableInitialCreditsExpiration, boolean initialCreditsExpirationExists) {
+  @Test
+  public void testInstitutionAddressInvalid_emailAddressTierConfigNotExist() {
     testUnregistration(
         user -> {
           institutionService.updateInstitution(
               institution.getShortName(), institution.tierConfigs(ImmutableList.of()));
           return userDao.save(user);
-        },
-        enableInitialCreditsExpiration,
-        initialCreditsExpirationExists);
+        });
   }
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,true"})
-  public void testInstitutionRequirement_optionalEra(
-      boolean enableInitialCreditsExpiration, boolean initialCreditsExpirationExists) {
-    setEnableInitialCreditsExpiration(enableInitialCreditsExpiration);
+  @Test
+  public void testInstitutionRequirement_optionalEra() {
     assertThat(userAccessTierDao.findAll()).isEmpty();
     providedWorkbenchConfig.access.enableEraCommons = true;
     providedWorkbenchConfig.access.enableRasLoginGovLinking = true;
@@ -1091,14 +959,10 @@ public class UserServiceAccessTest {
         institution.tierConfigs(ImmutableList.of(rtTierConfig.eraRequired(false))));
     dbUser = updateUserAccessTiers();
     assertRegisteredTierEnabled(dbUser);
-    assertUserInitialCreditsExpirationExists(initialCreditsExpirationExists);
   }
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,true"})
-  public void testInstitutionRequirement_optionalEra_loginGovFlagDisabled(
-      boolean enableInitialCreditsExpiration, boolean initialCreditsExpirationExists) {
-    setEnableInitialCreditsExpiration(enableInitialCreditsExpiration);
+  @Test
+  public void testInstitutionRequirement_optionalEra_loginGovFlagDisabled() {
     // User not complete eRA, but it is optional for that institution
     assertThat(userAccessTierDao.findAll()).isEmpty();
     providedWorkbenchConfig.access.enableEraCommons = true;
@@ -1116,14 +980,10 @@ public class UserServiceAccessTest {
     providedWorkbenchConfig.access.enableRasLoginGovLinking = false;
     dbUser = updateUserAccessTiers();
     assertRegisteredTierDisabled(dbUser);
-    assertUserInitialCreditsExpirationExists(initialCreditsExpirationExists);
   }
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,true"})
-  public void testInstitutionRequirement_optionalEra_loginGovFlagEnabled_eRAFlagDisabled(
-      boolean enableInitialCreditsExpiration, boolean initialCreditsExpirationExists) {
-    setEnableInitialCreditsExpiration(enableInitialCreditsExpiration);
+  @Test
+  public void testInstitutionRequirement_optionalEra_loginGovFlagEnabled_eRAFlagDisabled() {
     // When eRA flag is disabled, that means user completed eRA Commons
     assertThat(userAccessTierDao.findAll()).isEmpty();
     updateUserWithRetries(this::registerUser);
@@ -1136,14 +996,10 @@ public class UserServiceAccessTest {
     accessModuleService.updateCompletionTime(dbUser, DbAccessModuleName.ERA_COMMONS, null);
     dbUser = updateUserAccessTiers();
     assertRegisteredTierEnabled(dbUser);
-    assertUserInitialCreditsExpirationExists(initialCreditsExpirationExists);
   }
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,true"})
-  public void testRasLinkNotComplete(
-      boolean enableInitialCreditsExpiration, boolean initialCreditsExpirationExists) {
-    setEnableInitialCreditsExpiration(enableInitialCreditsExpiration);
+  @Test
+  public void testRasLinkNotComplete() {
     assertThat(userAccessTierDao.findAll()).isEmpty();
     providedWorkbenchConfig.access.enableRasLoginGovLinking = true;
     dbUser = updateUserWithRetries(this::registerUser);
@@ -1163,14 +1019,10 @@ public class UserServiceAccessTest {
         dbUser, DbAccessModuleName.RAS_LOGIN_GOV, new Timestamp(PROVIDED_CLOCK.millis()));
     dbUser = updateUserAccessTiers();
     assertRegisteredTierEnabled(dbUser);
-    assertUserInitialCreditsExpirationExists(initialCreditsExpirationExists);
   }
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,true"})
-  public void testRasLinkNotComplete_LoginGovDisabled(
-      boolean enableInitialCreditsExpiration, boolean initialCreditsExpirationExists) {
-    setEnableInitialCreditsExpiration(enableInitialCreditsExpiration);
+  @Test
+  public void testRasLinkNotComplete_LoginGovDisabled() {
     // IDENTITY and LOGIN.GOV modules are not required for registered tier access when
     // enableRasLoginGovLinking is disabled.
     assertThat(userAccessTierDao.findAll()).isEmpty();
@@ -1181,40 +1033,28 @@ public class UserServiceAccessTest {
         dbUser.getUserId(), DbAccessModuleName.RAS_LOGIN_GOV, false);
     dbUser = updateUserAccessTiers();
     assertRegisteredTierEnabled(dbUser);
-    assertUserInitialCreditsExpirationExists(initialCreditsExpirationExists);
   }
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,true"})
-  public void test_updateUserWithRetries_addToControlledTier(
-      boolean enableInitialCreditsExpiration, boolean initialCreditsExpirationExists) {
-    setEnableInitialCreditsExpiration(enableInitialCreditsExpiration);
+  @Test
+  public void test_updateUserWithRetries_addToControlledTier() {
     assertThat(userAccessTierDao.findAll()).isEmpty();
 
     dbUser = updateUserWithRetries(this::completeRTAndCTRequirements);
     assertRegisteredTierEnabled(dbUser);
     assertControlledTierEnabled(dbUser);
-    assertUserInitialCreditsExpirationExists(initialCreditsExpirationExists);
   }
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,false"})
-  public void test_updateUserWithRetries_completeCTRequirementsOnly(
-      boolean enableInitialCreditsExpiration, boolean initialCreditsExpirationExists) {
-    setEnableInitialCreditsExpiration(enableInitialCreditsExpiration);
+  @Test
+  public void test_updateUserWithRetries_completeCTRequirementsOnly() {
     assertThat(userAccessTierDao.findAll()).isEmpty();
 
     dbUser = updateUserWithRetries(this::completeCTRequirements);
     assertUserNotInAccessTier(dbUser, registeredTier);
     assertUserNotInAccessTier(dbUser, controlledTier);
-    assertUserInitialCreditsExpirationExists(initialCreditsExpirationExists);
   }
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,true"})
-  public void test_updateUserWithRetries_inCompleteCTRequirements_CTCompliance(
-      boolean enableInitialCreditsExpiration, boolean initialCreditsExpirationExists) {
-    setEnableInitialCreditsExpiration(enableInitialCreditsExpiration);
+  @Test
+  public void test_updateUserWithRetries_inCompleteCTRequirements_CTCompliance() {
     assertThat(userAccessTierDao.findAll()).isEmpty();
 
     dbUser = completeRTAndCTRequirements(dbUser);
@@ -1225,14 +1065,10 @@ public class UserServiceAccessTest {
 
     assertRegisteredTierEnabled(dbUser);
     assertUserNotInAccessTier(dbUser, controlledTier);
-    assertUserInitialCreditsExpirationExists(initialCreditsExpirationExists);
   }
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,true"})
-  public void test_updateUserWithRetries_inCompleteCTRequirements_eraRequired(
-      boolean enableInitialCreditsExpiration, boolean initialCreditsExpirationExists) {
-    setEnableInitialCreditsExpiration(enableInitialCreditsExpiration);
+  @Test
+  public void test_updateUserWithRetries_inCompleteCTRequirements_eraRequired() {
     assertThat(userAccessTierDao.findAll()).isEmpty();
 
     dbUser = completeRTAndCTRequirements(dbUser);
@@ -1250,14 +1086,10 @@ public class UserServiceAccessTest {
 
     assertRegisteredTierEnabled(dbUser);
     assertUserNotInAccessTier(dbUser, controlledTier);
-    assertUserInitialCreditsExpirationExists(initialCreditsExpirationExists);
   }
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,true"})
-  public void test_updateUserWithRetries_eraNotRequiredForTiers(
-      boolean enableInitialCreditsExpiration, boolean initialCreditsExpirationExists) {
-    setEnableInitialCreditsExpiration(enableInitialCreditsExpiration);
+  @Test
+  public void test_updateUserWithRetries_eraNotRequiredForTiers() {
     assertThat(userAccessTierDao.findAll()).isEmpty();
 
     dbUser = completeRTAndCTRequirements(dbUser);
@@ -1271,14 +1103,10 @@ public class UserServiceAccessTest {
 
     assertRegisteredTierEnabled(dbUser);
     assertControlledTierEnabled(dbUser);
-    assertUserInitialCreditsExpirationExists(initialCreditsExpirationExists);
   }
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,true"})
-  public void testInstitutionRequirement_rtEraDoesNotAffectCTEra(
-      boolean enableInitialCreditsExpiration, boolean initialCreditsExpirationExists) {
-    setEnableInitialCreditsExpiration(enableInitialCreditsExpiration);
+  @Test
+  public void testInstitutionRequirement_rtEraDoesNotAffectCTEra() {
     assertThat(userAccessTierDao.findAll()).isEmpty();
     providedWorkbenchConfig.access.enableEraCommons = true;
     providedWorkbenchConfig.access.enableRasLoginGovLinking = true;
@@ -1297,35 +1125,27 @@ public class UserServiceAccessTest {
 
     assertRegisteredTierEnabled(dbUser);
     assertControlledTierEnabled(dbUser);
-    assertUserInitialCreditsExpirationExists(initialCreditsExpirationExists);
   }
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,true"})
-  public void test_updateUserWithRetries_emailValidForRTButNotValidForCT(
-      boolean enableInitialCreditsExpiration, boolean initialCreditsExpirationExists) {
-    setEnableInitialCreditsExpiration(enableInitialCreditsExpiration);
+  @Test
+  public void test_updateUserWithRetries_emailValidForRTButNotValidForCT() {
     assertThat(userAccessTierDao.findAll()).isEmpty();
     dbUser = completeRTAndCTRequirements(dbUser);
 
-    ctTierConfig.setEmailDomains(List.of("fakeDomain.com"));
+    ctTierConfig.setEmailDomains(Arrays.asList("fakeDomain.com"));
     updateInstitutionTier(ctTierConfig);
 
     dbUser = updateUserAccessTiers();
 
     assertRegisteredTierEnabled(dbUser);
     assertUserNotInAccessTier(dbUser, controlledTier);
-    assertUserInitialCreditsExpirationExists(initialCreditsExpirationExists);
   }
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,true"})
-  public void test_updateUserWithRetries_updateInvalidEmailForCT(
-      boolean enableInitialCreditsExpiration, boolean initialCreditsExpirationExists) {
-    test_updateUserWithRetries_emailValidForRTButNotValidForCT(
-        enableInitialCreditsExpiration, initialCreditsExpirationExists);
+  @Test
+  public void test_updateUserWithRetries_updateInvalidEmailForCT() {
+    test_updateUserWithRetries_emailValidForRTButNotValidForCT();
 
-    ctTierConfig.setEmailDomains(List.of("domain.com"));
+    ctTierConfig.setEmailDomains(Arrays.asList("domain.com"));
     updateInstitutionTier(ctTierConfig);
 
     dbUser = updateUserAccessTiers();
@@ -1334,11 +1154,8 @@ public class UserServiceAccessTest {
     assertControlledTierEnabled(dbUser);
   }
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,true"})
-  public void test_updateUserWithRetries_didNotSignCTAgreement(
-      boolean enableInitialCreditsExpiration, boolean initialCreditsExpirationExists) {
-    setEnableInitialCreditsExpiration(enableInitialCreditsExpiration);
+  @Test
+  public void test_updateUserWithRetries_didNotSignCTAgreement() {
     assertThat(userAccessTierDao.findAll()).isEmpty();
     dbUser = completeRTAndCTRequirements(dbUser);
     Institution institution = institutionService.getByUser(dbUser).get();
@@ -1353,14 +1170,10 @@ public class UserServiceAccessTest {
 
     assertRegisteredTierEnabled(dbUser);
     assertUserNotInAccessTier(dbUser, controlledTier);
-    assertUserInitialCreditsExpirationExists(initialCreditsExpirationExists);
   }
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,true"})
-  public void test_updateUserWithRetries_eraFFisOff_CT(
-      boolean enableInitialCreditsExpiration, boolean initialCreditsExpirationExists) {
-    setEnableInitialCreditsExpiration(enableInitialCreditsExpiration);
+  @Test
+  public void test_updateUserWithRetries_eraFFisOff_CT() {
     providedWorkbenchConfig.access.enableEraCommons = false;
     assertThat(userAccessTierDao.findAll()).isEmpty();
 
@@ -1379,14 +1192,10 @@ public class UserServiceAccessTest {
 
     assertRegisteredTierEnabled(dbUser);
     assertControlledTierEnabled(dbUser);
-    assertUserInitialCreditsExpirationExists(initialCreditsExpirationExists);
   }
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,true"})
-  public void test_updateUserWithRetries_ct_complianceTrainingFFisOff_CT(
-      boolean enableInitialCreditsExpiration, boolean initialCreditsExpirationExists) {
-    setEnableInitialCreditsExpiration(enableInitialCreditsExpiration);
+  @Test
+  public void test_updateUserWithRetries_ct_complianceTrainingFFisOff_CT() {
     providedWorkbenchConfig.access.enableComplianceTraining = false;
     assertThat(userAccessTierDao.findAll()).isEmpty();
 
@@ -1402,14 +1211,10 @@ public class UserServiceAccessTest {
 
     assertRegisteredTierEnabled(dbUser);
     assertControlledTierEnabled(dbUser);
-    assertUserInitialCreditsExpirationExists(initialCreditsExpirationExists);
   }
 
-  @ParameterizedTest
-  @CsvSource({"false,false", "true,true"})
-  public void test_updateUserWithRetries_noCT(
-      boolean enableInitialCreditsExpiration, boolean initialCreditsExpirationExists) {
-    setEnableInitialCreditsExpiration(enableInitialCreditsExpiration);
+  @Test
+  public void test_updateUserWithRetries_noCT() {
     // CT does not exist anywhere
     assertThat(userAccessTierDao.findAll()).isEmpty();
 
@@ -1421,7 +1226,6 @@ public class UserServiceAccessTest {
 
     assertRegisteredTierEnabled(dbUser);
     assertUserNotInAccessTier(dbUser, controlledTier);
-    assertUserInitialCreditsExpirationExists(initialCreditsExpirationExists);
   }
 
   // adds `days` days plus most of another day (to demonstrate we are truncating, not rounding)
@@ -1460,11 +1264,7 @@ public class UserServiceAccessTest {
   }
 
   // checks which power most of these tests - confirm that the unregisteringFunction does that
-  private void testUnregistration(
-      Function<DbUser, DbUser> unregisteringFunction,
-      boolean enableInitialCreditsExpiration,
-      boolean userInitialCreditsExpirationExists) {
-    setEnableInitialCreditsExpiration(enableInitialCreditsExpiration);
+  private void testUnregistration(Function<DbUser, DbUser> unregisteringFunction) {
     // initial state: user is unregistered (has no tier memberships)
     assertThat(userAccessTierDao.findAll()).isEmpty();
 
@@ -1478,9 +1278,6 @@ public class UserServiceAccessTest {
     // The user received a DbUserAccessTier when they were registered.
     // They still have it after unregistering but now it is DISABLED.
     assertRegisteredTierDisabled(dbUser);
-
-    // Test whether the user has an initial credits expiration record
-    assertUserInitialCreditsExpirationExists(userInitialCreditsExpirationExists);
   }
 
   // we can trim the signatures since we always call these in the same way
@@ -1614,17 +1411,5 @@ public class UserServiceAccessTest {
             .setInstitution(inst)
             .setInstitutionalRoleEnum(InstitutionalRole.FELLOW);
     verifiedInstitutionalAffiliationDao.save(affiliation);
-  }
-
-  private void setEnableInitialCreditsExpiration(boolean enable) {
-    providedWorkbenchConfig.featureFlags.enableInitialCreditsExpiration = enable;
-  }
-
-  private void assertUserInitialCreditsExpirationExists(boolean expectExists) {
-    if (expectExists) {
-      assertThat(userInitialCreditsExpirationDao.findByUser(dbUser)).isPresent();
-    } else {
-      assertThat(userInitialCreditsExpirationDao.findByUser(dbUser)).isEmpty();
-    }
   }
 }
